Page Objet : Fix Image size on narrow screen

--- a/site/src/components/assets/scss/pages/pages_objet/_page_objet-desktop.scss
+++ b/site/src/components/assets/scss/pages/pages_objet/_page_objet-desktop.scss
@@ -182,6 +182,21 @@
 @media screen and (min-width: 1080px) {}
 
 
+@media screen and (min-width: 700px) and (max-aspect-ratio:1/1) { 
+	#img-article{
+		pre{ 
+	        font-size: calc(((100vw - #{$unite*2})/240)*4) !important; // Should change with width
+			left: -50%;
+			transform: translateX(50%);	        
+		}
+	}
+}
 
-
+@media screen and (min-aspect-ratio:1/1) and (max-aspect-ratio:9/6) {
+	#img-article{
+		pre{ 
+	        font-size: calc(((100vw - #{$unite*2})/240)*2.75) !important; // Should change with width
+		}
+	}
+}
 
